Fix graph spacing to work on large screens.

--- a/static/styles.css
+++ b/static/styles.css
@@ -42,17 +42,25 @@ body{
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+
 .chart-section {
     height: 400px;
     border: 7px;
     border-style: dotted;
     border-color: rgb(220,100,0);
-    box-shadow: 0px 0px 30px 30px rgba(255,100,0,.2) inset,
-                0px 0px 30px 30px rgba(255,100,0,.2);
+    box-shadow: 0px 0px 20px 20px rgba(255,100,0,.2) inset,
+                0px 0px 20px 20px rgba(255,100,0,.2);
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+@media (min-width: 992px) {  /* lg breakpoint in Bootstrap */
+    .chart-section {
+        max-width: 65%; /* only applies on large screens and above */
+    }
+}
+
 
 
 nav{
